--- a/Eagle/Eagle.vcxproj.filters
+++ b/Eagle/Eagle.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Eagle">
       <UniqueIdentifier>{2390160D-8FA4-3EBE-5826-E21DC4F93AEF}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Eagle\Camera">
+      <UniqueIdentifier>{3B3F68D2-27A2-F776-D027-302DBC69C3F9}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Eagle\Core">
       <UniqueIdentifier>{5B42CEE6-47FA-0F34-B001-E98F9CD8AA24}</UniqueIdentifier>
     </Filter>
@@ -13,11 +16,20 @@
     <Filter Include="Eagle\ImGui">
       <UniqueIdentifier>{8D5301C1-F908-7AB6-82FD-738DEEB170BA}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Eagle\Platform">
-      <UniqueIdentifier>{D7A39840-C371-8C46-AC05-FD6C987268AB}</UniqueIdentifier>
+    <Filter Include="Eagle\Input">
+      <UniqueIdentifier>{628E02C1-CE43-7BB6-5738-758DC3EC71BA}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Eagle\Platform\Windows">
-      <UniqueIdentifier>{11351CEF-FD2E-4541-E69B-DB51D234ABAD}</UniqueIdentifier>
+    <Filter Include="Eagle\Renderer">
+      <UniqueIdentifier>{29AB751B-1579-6921-FE0C-DA47EA794586}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -25,8 +37,17 @@
     <ClInclude Include="src\Eagle\Application.h">
       <Filter>Eagle</Filter>
     </ClInclude>
+    <ClInclude Include="src\Eagle\Camera\Camera.h">
+      <Filter>Eagle\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Camera\OrthographicCamera.h">
+      <Filter>Eagle\Camera</Filter>
+    </ClInclude>
     <ClInclude Include="src\Eagle\Core.h">
       <Filter>Eagle</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Core\Timestep.h">
+      <Filter>Eagle\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Eagle\EntryPoint.h">
       <Filter>Eagle</Filter>
@@ -46,6 +67,15 @@
     <ClInclude Include="src\Eagle\ImGui\ImGuiLayer.h">
       <Filter>Eagle\ImGui</Filter>
     </ClInclude>
+    <ClInclude Include="src\Eagle\Input\Input.h">
+      <Filter>Eagle\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Input\KeyCodes.h">
+      <Filter>Eagle\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Input\MouseButtonCodes.h">
+      <Filter>Eagle\Input</Filter>
+    </ClInclude>
     <ClInclude Include="src\Eagle\Layer.h">
       <Filter>Eagle</Filter>
     </ClInclude>
@@ -55,42 +85,54 @@
     <ClInclude Include="src\Eagle\Log.h">
       <Filter>Eagle</Filter>
     </ClInclude>
+    <ClInclude Include="src\Eagle\Renderer\Buffer.h">
+      <Filter>Eagle\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Renderer\GraphicsContext.h">
+      <Filter>Eagle\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Renderer\Renderer.h">
+      <Filter>Eagle\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Renderer\RendererAPI.h">
+      <Filter>Eagle\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Renderer\Shader.h">
+      <Filter>Eagle\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Eagle\Renderer\VertexArray.h">
+      <Filter>Eagle\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Eagle\Window.h">
       <Filter>Eagle</Filter>
     </ClInclude>
-    <ClInclude Include="src\egpch.h" />
-    <ClInclude Include="src\Eagle\Renderer\GraphicsContext.h" />
-    <ClInclude Include="src\Eagle\Renderer\Shader.h" />
-    <ClInclude Include="src\Eagle\Renderer\Renderer.h" />
-    <ClInclude Include="src\Eagle\Renderer\Buffer.h" />
-    <ClInclude Include="src\Eagle\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
-      <Filter>Eagle\Platform\Windows</Filter>
+      <Filter>Platform\Windows</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
-      <Filter>Eagle\Platform\Windows</Filter>
+      <Filter>Platform\Windows</Filter>
     </ClInclude>
-    <ClInclude Include="src\Eagle\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
-    <ClInclude Include="src\Eagle\Camera\Camera.h" />
-    <ClInclude Include="src\Eagle\Camera\OrthographicCamera.h" />
-    <ClInclude Include="src\Eagle\Input\KeyCodes.h">
-      <Filter>Eagle\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Eagle\Input\MouseButtonCodes.h">
-      <Filter>Eagle\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Eagle\Input\Input.h">
-      <Filter>Eagle</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Eagle\Core\Timestep.h" />
+    <ClInclude Include="src\egpch.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Eagle\Application.cpp">
       <Filter>Eagle</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Eagle\Camera\OrthographicCamera.cpp">
+      <Filter>Eagle\Camera</Filter>
     </ClCompile>
     <ClCompile Include="src\Eagle\ImGui\ImGuiBuild.cpp">
       <Filter>Eagle\ImGui</Filter>
@@ -107,22 +149,40 @@
     <ClCompile Include="src\Eagle\Log.cpp">
       <Filter>Eagle</Filter>
     </ClCompile>
-    <ClCompile Include="src\egpch.cpp" />
-    <ClCompile Include="src\Eagle\Renderer\Shader.cpp" />
-    <ClCompile Include="src\Eagle\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\Eagle\Renderer\Buffer.cpp" />
-    <ClCompile Include="src\Eagle\Renderer\VertexArray.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
+    <ClCompile Include="src\Eagle\Renderer\Buffer.cpp">
+      <Filter>Eagle\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Eagle\Renderer\Renderer.cpp">
+      <Filter>Eagle\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Eagle\Renderer\RendererAPI.cpp">
+      <Filter>Eagle\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Eagle\Renderer\Shader.cpp">
+      <Filter>Eagle\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Eagle\Renderer\VertexArray.cpp">
+      <Filter>Eagle\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
-      <Filter>Eagle\Platform\Windows</Filter>
+      <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
-      <Filter>Eagle\Platform\Windows</Filter>
+      <Filter>Platform\Windows</Filter>
     </ClCompile>
-    <ClCompile Include="src\Eagle\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
-    <ClCompile Include="src\Eagle\Camera\OrthographicCamera.cpp" />
+    <ClCompile Include="src\egpch.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
   </ItemGroup>
 </Project>
