--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -15,6 +15,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][DockSpace Demo]
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -36,10 +37,10 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Settings]
-Pos=726,27
-Size=372,128
+Pos=0,578
+Size=1002,142
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000009,0
 
 [Window][Profiling]
 Pos=39,129
@@ -47,18 +48,19 @@ Size=251,55
 Collapsed=0
 
 [Window][Stats]
-Pos=1100,27
-Size=147,128
+Pos=1004,19
+Size=276,701
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000002,0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=864,188 Size=521,128 Split=X
-  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=385,131 Selected=0x1C33C293
-  DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=152,131 Selected=0x968648AE
-DockSpace     ID=0x3BC79352 Pos=184,111 Size=1280,701 Split=X
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=338,701 Selected=0xBF126D42
-  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=940,701 Split=Y
-    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=468,220 Selected=0x46B5E99C
-    DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=468,479 CentralNode=1
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=216,258 Size=1280,701 Split=X
+  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=1002,701 Split=X
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=338,701 Selected=0xBF126D42
+    DockNode      ID=0x00000005 Parent=0x00000001 SizeRef=940,701 Split=Y
+      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=468,220 Selected=0x46B5E99C
+      DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=468,479 Split=Y
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=1002,557 CentralNode=1
+        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=1002,142 Selected=0x1C33C293
+  DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=276,701 Selected=0x968648AE
 
